# OlyJS

./: .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  esbuild.config.build.js  esbuild.config.common.js  esbuild.config.dev.js  esbuild.dev.config.js  eslint.config.mjs  index.html  makefile  package-lock.json  package.json  tsconfig.build.json  tsconfig.dev.json  tsconfig.json  tsup.config.ts  vitest.config.ts
examples/move/: engine.d.ts  engine.js  index.html  index.js
native/: CMakeLists.txt  docker-compose.yml
native/include/: engine.h
native/src/: engine.cpp
src/: index.ts
src/common/: delta-time.ts  index.ts
src/components/: component.ts  game-component.ts  game-object.component.ts  game-object.ts  index.ts  transform.component.ts
src/contracts/: index.ts
src/core/: engine.ts  game-engine.ts  game-loop.ts  game.ts  index.ts  types.ts
src/ecs/: archetype.ts  component.ts  entity.ts  index.ts  query.ts  system.ts  world.ts
src/engine/: engine.ts  index.ts  mutable-system-initialize-context.ts  types.d.ts  types.ts
src/entities/: camera.entity.ts  circle-game-object.entity.ts  game-object.entity.ts  game-object.ts  index.ts  rectangle-game-object.entity.ts
src/enums/: button.enum.ts  index.ts  key.enum.ts  wheel-type.enum.ts
src/game/: game.ts  index.ts  mutable-system-context.ts
src/game-runtime/: game.ts  index.ts  mutable-system-context.ts  mutable-system-update-context.ts
src/gameplay/: index.ts
src/interfaces/: circle.interface.ts  container-component.interface.ts  context-render-2d.interface.ts  destroyable.interface.ts  euler.interface.ts  game-object.interface.ts  game-system.interface.ts  index.ts  mono-behaviour.interface.ts  observable.interface.ts  queue.interface.ts  rectangle.interface.ts  renderable.interface.ts  rgb.interface.ts  startable.interface.ts  system.interface.ts  taggable.interface.ts  (+3 more)
src/wasm/: CMakeLists.txt  Dockerfile
src/wasm/src/: main.cpp
tests/: index.html  index.js
wasm/: CMakeLists.txt  Dockerfile  docker-compose.yaml
wasm/src/: index.html  main.cpp
web/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.dev.json  tsconfig.json
(+274 files in other folders)
